--- a/computingwiththread/index.html
+++ b/computingwiththread/index.html
@@ -17,9 +17,9 @@
 <p>'Computing with Thread'<br/>July 2016<br/>Alte Staatsbank, Weimar</p>
 </div>
 
-<img class="images" src="images/image1.jpg"><br/>
-<img class="images" src="images/image2.jpg"><br/>
-<img class="images" src="images/image3.jpg"><br/>
+<img class="images" src="images/image1.JPG"><br/>
+<img class="images" src="images/image2.JPG"><br/>
+<img class="images" src="images/image3.JPG"><br/>
 <img class="images" src="images/image0.png"><br/>
 <img class="images" src="images/gifthread.gif"><br/>
 
