--- a/computingwiththread/index.html
+++ b/computingwiththread/index.html
@@ -17,7 +17,7 @@
 <p>'Computing with Thread'<br/>July 2016<br/>Alte Staatsbank, Weimar</p>
 </div>
 
-<img class="images" src="images/image1.JPG"><br/>
+<img class="images" src="https://c1.staticflickr.com/1/872/26626728537_0162013873_b.jpg"><br/>
 <img class="images" src="images/image2.JPG"><br/>
 <img class="images" src="images/image3.JPG"><br/>
 <img class="images" src="images/image0.png"><br/>
