--- a/toothpaste/index.html
+++ b/toothpaste/index.html
@@ -18,7 +18,7 @@
 </div>
 
 <img class="images" src="images/image1.jpg"><br/>
-<img class="images" src="images/image2.jpg"><br/>
+<img class="images" src="images/image2.JPG"><br/>
 <img class="images" src="images/image3.jpg"><br/>
 
 <script src = "../sketch.js"></script>
