--- a/bewegtesland/index.html
+++ b/bewegtesland/index.html
@@ -16,8 +16,7 @@
 
 <iframe id = "video1"  width="640" height="360" src="https://player.vimeo.com/video/233204835?&amp;loop=0" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
 
-<iframe id = "video2" width="640" height="360" src="https://www.youtube.com/embed/kr6hlMubGJU?rel=0&amp;controls=0" frameborder="0" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen=""></iframe>
-
+	<video width="640" height="360" src="..images/DW_video.mp4" controls></video>
 
 <div id="textbox" onmousemove="mainTitle(454,50), colourChanger()">
 <p>'Jalousie in Camburg' (as part of)<br/>'Bewegtes Land / Scenery for a passing train'<br/>August 2017<br/>Saaletal, Thüringen</p>
