--- a/notonthelist/index.html
+++ b/notonthelist/index.html
@@ -10,6 +10,8 @@
 </style>
 </head>
 <body>
+    
+    	<video class='center' width="640" height="360" src="img/giphy.mp4" autoplay loop></video>
 
 <p id="demo"></p>
 
