--- a/notonthelist/index.html
+++ b/notonthelist/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     
-    	<video style="display:block; margin: 0 auto;" width="640" height="360" src="img/giphy.mp4" autoplay loop></video>
+    	<video loop style="display:block; margin: 0 auto;" width="640" height="360" src="img/giphy.mp4"></video>
 
 <p id="demo"></p>
 
