--- a/notonthelist/index.html
+++ b/notonthelist/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     
-    	<video controls autoplay loop style="display:block; margin: 0 auto;" width="640" height="360" src="img/giphy.mp4"></video>
+    	<video autoplay loop style="display:block; margin: 0 auto;" width="640" height="360" src="img/giphy.mp4"></video>
 
-<p id="demo"></p>
+<div id="demo">
 
 <script>
 // Set the date we're counting down to
@@ -45,6 +45,8 @@ var x = setInterval(function() {
     }
 }, 1000);
 </script>
+    
+    </div>
 
 </body>
 </html>
