--- a/notonthelist/index.html
+++ b/notonthelist/index.html
@@ -14,6 +14,9 @@
     	<video controls autoplay loop style="display:block; margin: 0 auto;" width="640" height="360" src="img/giphy.mp4"></video>
 
 <div id="demo">
+    
+    <p>
+    TIME UNTIL THE PARTY STARTS</p>
 
 <script>
 // Set the date we're counting down to
